--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,8 @@
     "        omega_r = (1 + L/4) * pi / Rw\n",
     "    else:\n",
     "        omega_l = (1 + L/4) * pi / Rw\n",
-    "        omega_r = (1 - L/4) * pi / Rw"
+    "        omega_r = (1 - L/4) * pi / Rw\n",
+    "    return array([omega_l, omega_r])"
    ]
   },
   {
