--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -244,6 +244,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -706,6 +713,43 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's assume that $X_e = (x_e, y_e, \\theta_e) = (0,0,0)$ is an equilibrium of the wheelchair kinematic model, therefor  $\\dot{X}(t) = 0$ at $X(t) = X_e$ . Let us substitute $X(t) = X_e$  in the equations of the wheelchair kinematic model as follows:\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\dot{x}(t) &= R_w \\frac{\\omega_l + \\omega_r}{2} \\cos(\\theta(t))\\\n",
+    "&= R_w \\frac{\\omega_l + \\omega_r}{2} \\cos(0) \\\n",
+    "&= R_w \\frac{\\omega_l + \\omega_r}{2}\n",
+    "&= 0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\dot{y}(t) &= R_w \\frac{\\omega_l + \\omega_r}{2} \\sin(\\theta(t))\\\n",
+    "&= R_w \\frac{\\omega_l + \\omega_r}{2} \\sin(0) \\\n",
+    "&= 0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\dot{\\theta}(t) &= R_w \\frac{\\omega_l - \\omega_r}{L} \\\n",
+    "&= R_w \\frac{\\omega_l - \\omega_r}{L} \\\n",
+    "&= 0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "Therefore, we ended up with the following system :\n",
+    "\n",
+    "\\begin{cases}\n",
+    "\\omega_l - \\omega_r = 0 \\\\\n",
+    "\\omega_l + \\omega_r = 0 \\\n",
+    "\\end{cases}\n",
+    "\n",
+    "Finally, \n",
+    "\n",
+    "$$\\omega_e = (\\omega_l , \\omega_r) = (0,0) $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -722,6 +766,48 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's assume that $\\omega_e = (0,0) $\n",
+    "\n",
+    "the condition of equilibrium  :\n",
+    "\\begin{aligned}\n",
+    "\\dot{x}(t) &= R_w \\frac{\\omega_l + \\omega_r}{2} \\cos(\\theta(t))\\\n",
+    "&= 0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\dot{y}(t) &= R_w \\frac{\\omega_l + \\omega_r}{2} \\sin(\\theta(t))\\\n",
+    "&= 0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\dot{\\theta}(t) &= R_w \\frac{\\omega_l - \\omega_r}{L} \\\n",
+    "&= 0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "the last equation gives $\\omega_l = \\omega_r$\n",
+    "\n",
+    "Therefor, \n",
+    "\\begin{aligned}\n",
+    "\\dot{x}(t) &= R_w \\omega_l \\cos(\\theta(t))\\\n",
+    "&= 0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\dot{y}(t) &= R_w \\omega_l \\sin(\\theta(t))\\\n",
+    "&= 0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "Thus, $$ R_w^2 \\omega_l^2 = 0 $$\n",
+    "\n",
+    "Finally, $$\\omega_e = (\\omega_l , \\omega_r) = (0,0) $$\n",
+    "\n",
+    "Which contridict our initial hypothesis, Hence for any other $\\omega_e$, the system has no equilibrium.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -734,6 +820,39 @@
    "metadata": {},
    "source": [
     "**Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if $\\omega_e = (0,0) $\n",
+    "\n",
+    "the system becomes  :\n",
+    "\\begin{aligned}\n",
+    "\\dot{x}(t) &= R_w \\frac{\\omega_l + \\omega_r}{2} \\cos(\\theta(t))\\\n",
+    "&= 0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\dot{y}(t) &= R_w \\frac{\\omega_l + \\omega_r}{2} \\sin(\\theta(t))\\\n",
+    "&= 0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\dot{\\theta}(t) &= R_w \\frac{\\omega_l - \\omega_r}{L} \\\n",
+    "&= 0\n",
+    "\\end{aligned}\n",
+    "\n",
+    "Thus, \n",
+    "\n",
+    "\\begin{cases}\n",
+    "\\dot{x}(t) = 0 \\\\\n",
+    "\\dot{y}(t) = 0 \\\\\n",
+    "\\dot{\\theta}(t) = 0 \n",
+    "\\end{cases}\n",
+    "\n",
+    "Finally, the equilibria of the system are $X(t) = X$ where $X$ is a constant"
    ]
   },
   {
