--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -883,6 +883,31 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The matrix $A$ is: $\\frac{\\partial f}{\\partial X}$\n",
+    "\n",
+    "\\begin{equation}\n",
+    "A = \\begin{bmatrix}\n",
+    "0 & 0 & 0 \\\\\n",
+    "0 & 0 & R_w\\frac{\\omega_l + \\omega_r}{2} \\\\\n",
+    "0 & 0 & 0\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "\n",
+    "The matrix $B$ is: $\\frac{\\partial f}{\\partial W}$\n",
+    "\n",
+    "\\begin{equation}\n",
+    "B = \\begin{bmatrix}\n",
+    "\\frac{R_w}{2} & \\frac{R_w}{2} \\\\\n",
+    "0 & 0 \\\\\n",
+    "\\frac{R_w}{L} & -\\frac{R_w}{L}\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
