Linearized System Model, Stability of the linearized system

--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -731,8 +731,8 @@
     "\\end{aligned}\n",
     "\n",
     "\\begin{aligned}\n",
-    "\\dot{\\theta}(t) &= R_w \\frac{\\omega_l - \\omega_r}{L} \\\n",
-    "&= R_w \\frac{\\omega_l - \\omega_r}{L} \\\n",
+    "\\dot{\\theta}(t) &= R_w \\frac{\\omega_r - \\omega_l}{L} \\\n",
+    "&= R_w \\frac{\\omega_r - \\omega_l}{L} \\\n",
     "&= 0\n",
     "\\end{aligned}\n",
     "\n",
@@ -782,7 +782,7 @@
     "\\end{aligned}\n",
     "\n",
     "\\begin{aligned}\n",
-    "\\dot{\\theta}(t) &= R_w \\frac{\\omega_l - \\omega_r}{L} \\\n",
+    "\\dot{\\theta}(t) &= R_w \\frac{\\omega_r - \\omega_l}{L} \\\n",
     "&= 0\n",
     "\\end{aligned}\n",
     "\n",
@@ -840,7 +840,7 @@
     "\\end{aligned}\n",
     "\n",
     "\\begin{aligned}\n",
-    "\\dot{\\theta}(t) &= R_w \\frac{\\omega_l - \\omega_r}{L} \\\n",
+    "\\dot{\\theta}(t) &= R_w \\frac{\\omega_r - \\omega_l}{L} \\\n",
     "&= 0\n",
     "\\end{aligned}\n",
     "\n",
@@ -885,12 +885,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The matrix $A$ is: $\\frac{\\partial f}{\\partial X}$\n",
+    "The matrix $A$ is: $\\frac{\\partial f}{\\partial X}$ \n",
     "\n",
     "\\begin{equation}\n",
     "A = \\begin{bmatrix}\n",
     "0 & 0 & 0 \\\\\n",
-    "0 & 0 & R_w\\frac{\\omega_l + \\omega_r}{2} \\\\\n",
+    "0 & 0 & 0 \\\\\n",
     "0 & 0 & 0\n",
     "\\end{bmatrix}\n",
     "\\end{equation}\n",
@@ -901,7 +901,7 @@
     "B = \\begin{bmatrix}\n",
     "\\frac{R_w}{2} & \\frac{R_w}{2} \\\\\n",
     "0 & 0 \\\\\n",
-    "\\frac{R_w}{L} & -\\frac{R_w}{L}\n",
+    "-\\frac{R_w}{L} & \\frac{R_w}{L}\n",
     "\\end{bmatrix}\n",
     "\\end{equation}\n"
    ]
@@ -933,6 +933,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The linearized system is not asymptotically stable around $(0,0,0)$ when $\\Delta \\omega = (0,0)$ because all the eigenvalues of $A$ are zero, which means that the system has neutral stability."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -945,6 +952,13 @@
    "metadata": {},
    "source": [
     "🔓 **Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As $\\omega=(0,0)$, the wheelchair will remain stationary and for any starting position $x_0$, the outcome will only converge if $x_0=(0,0,0)$. Hence, the initial system lacks both asymptotic stability and local attractiveness."
    ]
   },
   {
