Controllability of the linearized system

--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -1001,6 +1001,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$A$ is the nul matrix, thus the linearized system becomes :\n",
+    "$\\frac{\\Delta X}{dt} = B\\Delta u$, Where $\\Delta u = (\\omega_l,\\omega_r) $ $$$$\n",
+    "the system becomes :\n",
+    "\\begin{aligned}\n",
+    "\\dot{x}(t) &= R_w \\frac{\\omega_l + \\omega_r}{2} \\\\\n",
+    "\\dot{y}(t) &= 0\\\\\n",
+    "\\dot{\\theta}(t) &= R_w \\frac{\\omega_r - \\omega_l}{L}\n",
+    "\\end{aligned}\n",
+    "if we take $\\omega_l = \\omega_r = \\omega $ where $\\omega$ is a constant $$$$\n",
+    "we integreate between the initial state and the final state of $x$, and we solve for $\\omega$ $$$$\n",
+    "We find $\\omega = 2/R_w$ $$$$\n",
+    "Therefor there is an admissible trajectory that start with the state $X_0=(-2,0,0)$ and ends at origin after some time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -1017,6 +1035,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\dot{y}(t) = 0$ means that $y(t)=y(0)=2$, thus there can not be an admissible trajectory that start with the state $X_0=(0,2,0)$ and ends at origin after some time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -1029,6 +1054,18 @@
    "metadata": {},
    "source": [
     "**Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see in the previous examples, there is a starting position and a final position that has no admissible trajectory, thus \n",
+    "the linearized system is not controllable $$$$\n",
+    "\n",
+    "P.S : if we compute the controllability matrix: $\\mathcal{C} = [B, AB, A^2B]$\n",
+    "\n",
+    "where $A$ and $B$ are the matrices computed previously. $\\mathcal{C}$ doesn't have a full rank (i.e., its rows are not linearly independent)."
    ]
   },
   {
