--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -1106,6 +1106,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The set of admissible trajectrories is : $S = \\{(vt,0,0) \\text{     / } t\\in R, v\\neq0 \\}$because we are moving in a straight line\n",
+    "\n",
+    "$A$ is the nul matrix, thus the linearized system becomes :\n",
+    "$\\frac{\\Delta X}{dt} = B\\Delta u$, Where $\\Delta u = (\\omega_l,\\omega_r) $ $$$$\n",
+    "the system becomes :\n",
+    "\\begin{aligned}\n",
+    "\\dot{x}_R(t) &= R_w \\frac{\\omega_l + \\omega_r}{2} \\\\\n",
+    "\\dot{y}_R(t) &= 0\\\\\n",
+    "\\dot{\\theta}_R(t) &= R_w \\frac{\\omega_r - \\omega_l}{L}\n",
+    "\\end{aligned}\n",
+    "Since, $x_R(t) = v t$, $\\dot{x}_R(t) = v$, and $\\dot{\\theta_R}(t) = 0$ because we are moving in a straight line$$$$\n",
+    "we solve the updated system\n",
+    "\\begin{aligned}\n",
+    "v &= R_w \\frac{\\omega_l + \\omega_r}{2} \\\\\n",
+    "0 &= R_w \\frac{\\omega_r - \\omega_l}{L}\n",
+    "\\end{aligned}\n",
+    "We find $\\omega_l = \\frac{v}{R_w} $ and $\\omega_r = \\frac{v}{R_w}$ $$$$\n",
+    "Finally,  $\\omega_{R}(t) = (\\frac{v}{R_w},\\frac{v}{R_w})$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Linearized system"
    ]
   },
