Control on a straight line

--- a/Project-2.ipynb
+++ b/Project-2.ipynb
@@ -1158,6 +1158,36 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The new matrix $A$ is: $\\frac{\\partial f}{\\partial X}$ evaluated in the point $X_R(t) = (x_R(t), y_R(t), \\theta_R(t))$\n",
+    "\n",
+    "\\begin{equation}\n",
+    "A = \\begin{bmatrix}\n",
+    "0 & 0 & 0 \\\\\n",
+    "0 & 0 & v \\\\\n",
+    "0 & 0 & 0\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "\n",
+    "The matrix $B$ is the same: $\\frac{\\partial f}{\\partial W}$\n",
+    "\n",
+    "\\begin{equation}\n",
+    "B = \\begin{bmatrix}\n",
+    "\\frac{R_w}{2} & \\frac{R_w}{2} \\\\\n",
+    "0 & 0 \\\\\n",
+    "-\\frac{R_w}{L} & \\frac{R_w}{L}\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "Finally, the linearized system is defined by the matrices $A$ and $B$ computed previously:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\Delta X}{dt} = A \\Delta X + B\\Delta u\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -1170,6 +1200,13 @@
    "metadata": {},
    "source": [
     "**Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The only eigenvalue of $A$ is $\\lambda = 0$, which has a zero real part. Therefore, the system is not asymptotically stable."
    ]
   },
   {
@@ -1190,6 +1227,18 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "with  $\\Delta\\omega(t)=0$ the linearized system becomes :\n",
+    "$$\n",
+    "\\frac{\\Delta X}{dt} = 0\n",
+    "$$\n",
+    "Thus, $ \\Delta X = K $, where K is a constant. $$$$\n",
+    "Finally, the system is not attractive"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -1202,6 +1251,25 @@
    "metadata": {},
    "source": [
     "**Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if we compute the controllability matrix: $\\mathcal{C} = [B, AB, A^2B]$\n",
+    "\n",
+    "where $A$ and $B$ are the matrices computed previously. \n",
+    "\\begin{equation}\n",
+    "\\mathcal{C} = \\begin{bmatrix}\n",
+    "\\frac{R_w}{2} & \\frac{R_w}{2} & 0 & 0 & 0& 0 \\\\\n",
+    "0 & 0 & -\\frac{vR_w}{L} & \\frac{vR_w}{L} & 0& 0\\\\\n",
+    "-\\frac{R_w}{L} & \\frac{R_w}{L} & 0 & 0 & 0& 0\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "\n",
+    "$\\mathcal{C}$ has a full rank (i.e 3)  $$$$\n",
+    "Therefor, the linearized system is controllable"
    ]
   },
   {
@@ -1227,11 +1295,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the matrix A : \n",
+      " [[0.         0.         0.        ]\n",
+      " [0.         0.         1.33333333]\n",
+      " [0.         0.         0.        ]]\n",
+      "This is the matrix B : \n",
+      " [[ 0.15  0.15]\n",
+      " [ 0.    0.  ]\n",
+      " [-0.6   0.6 ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "pass"
+    "v = 4.8/3.6\n",
+    "A = zeros((3, 3))\n",
+    "A[1,2] = v\n",
+    "print(\"This is the matrix A : \\n\",A)\n",
+    "B = array([[Rw/2, Rw/2], [0,0], [-Rw/L,Rw/L]])\n",
+    "print(\"This is the matrix B : \\n\",B)"
    ]
   },
   {
