the wheelchair starts with a wrong orientation

--- a/Project-3.ipynb
+++ b/Project-3.ipynb
@@ -2241,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
@@ -2263,6 +2263,7 @@
     "    x, y, theta = xytheta\n",
     "    omega_l, omega_r = omega(t, xytheta)\n",
     "    w = 0.5*array([sin(t), cos(t), sin(t)])\n",
+    "#     w = array([-0.5, 0, 0])\n",
     "    dx = Rw * 0.5 * (omega_l + omega_r) * cos(theta) + w[0]\n",
     "    dy = Rw * 0.5 * (omega_l + omega_r) * sin(theta) + w[1]\n",
     "    dtheta = Rw * (omega_r - omega_l) / L + w[2]\n",
@@ -2289,12 +2290,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 384,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pass"
+    "If the controller abruptly stops at t=10s, the wheelchair will continue moving with the same velocity and direction as before until some other force acts on it. \n",
+    "The system will no longer be controlled and the state of the system will continue to evolve according to the nonlinear dynamics of the system"
    ]
   },
   {
@@ -2305,12 +2305,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 385,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pass"
+    "If the wheelchair starts with a wrong orientation, it means that the actual initial state of the system differs from the desired initial state. This will result in a state trajectory that deviates from the desired trajectory, and the controller will need to correct for this error. $$$$\n",
+    "the magnitude of the orientation error will affect the performance of the controller and the time required to reach the desired state. A larger initial orientation error will likely result in a longer settling time and a larger control effort, as the controller must work harder to correct for the error."
    ]
   },
   {
