--- a/Project-3.ipynb
+++ b/Project-3.ipynb
@@ -2339,6 +2339,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$\n",
+    "\\begin{array}{rcl}\n",
+    "\\ x_f &=&  x + M\\cos \\theta \\\\\n",
+    "\\ y_f &=&  y +M\\sin \\theta\\\\\n",
+    "\\end{array}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "🧩 Write the differential equation satisfied by $(x_f, y_f)$. "
    ]
   },
@@ -2347,6 +2359,27 @@
    "metadata": {},
    "source": [
     "**Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{array}{rcl}\n",
+    "\\dot{x_f} &=& R_w  \\frac{\\omega_l + \\omega_r}{2} \\cos \\theta - M\\dot{\\theta}\\sin \\theta\\\\\n",
+    "\\dot{y_f} &=& R_w  \\frac{\\omega_l + \\omega_r}{2} \\sin \\theta + M\\dot{\\theta}\\cos \\theta\\\\\n",
+    "\\dot{\\theta} &=& R_w  \\frac{\\omega_r - \\omega_l}{L} \\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "If we replace $\\dot{\\theta}$ :\n",
+    "$$\n",
+    "\\begin{array}{rcl}\n",
+    "\\dot{x_f} &=& R_w  \\frac{\\omega_l + \\omega_r}{2} \\cos \\theta - MR_w  \\frac{\\omega_r - \\omega_l}{L}\\sin \\theta\\\\\n",
+    "\\dot{y_f} &=& R_w  \\frac{\\omega_l + \\omega_r}{2} \\sin \\theta + MR_w  \\frac{\\omega_r - \\omega_l}{L}\\cos \\theta\\\\\n",
+    "\\dot{\\theta} &=& R_w  \\frac{\\omega_r - \\omega_l}{L} \\\\\n",
+    "\\end{array}\n",
+    "$$"
    ]
   },
   {
