--- a/Project-3.ipynb
+++ b/Project-3.ipynb
@@ -2358,13 +2358,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "$$\n",
     "\\begin{array}{rcl}\n",
     "\\dot{x_f} &=& R_w  \\frac{\\omega_l + \\omega_r}{2} \\cos \\theta - M\\dot{\\theta}\\sin \\theta\\\\\n",
@@ -2386,7 +2379,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Answer:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "🧩 Show any (smooth) reference evolution of the person feet $(x_f^r(t), y_f^r(t))$ and any initial state of the wheelchair consistent with the initial feet location, there is an admissible trajectory $(x(t), y(t), \\theta(t))$ that corresponds to this reference. Hint: search the unique $\\omega_l(t)$ and $\\omega_r(t)$ -- as functions of $\\dot{x}_f^r(t)$, $\\dot{y}_f^r(t)$ and $\\theta(t)$ -- that satisfies this property. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us solve the first two equations of the system to find $\\omega_l(t)$ and $\\omega_r(t)$ as functions of $\\dot{x}_f^r(t)$, $\\dot{y}_f^r(t)$ and $\\theta(t)$.\n",
+    "We have:\n",
+    "$$$$\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\dot{x}_f^r(t)}{R_w \\cos \\theta} & =\\frac{\\omega_l(t)+\\omega_r(t)}{2}-\\frac{M}{L}\\left(\\omega_r(t)-\\omega_l(t)\\right) \\tan \\theta \\\\\n",
+    "\\frac{\\dot{y}_f^r(t)}{R_w \\sin \\theta} & =\\frac{\\omega_l(t)+\\omega_r(t)}{2}+\\frac{M}{L}\\left(\\omega_r(t)-\\omega_l(t)\\right)\\frac{1}{\\tan\\theta}\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "$$$$\n",
+    "Let's define $\\omega_m = \\frac{\\omega_l(t)+\\omega_r(t)}{2}$ and $\\omega_\\Delta = \\frac{\\omega_r(t)-\\omega_l(t)}{2}$. We can rewrite the system as:\n",
+    "$$$$\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\dot{x}_f^r(t)}{R_w \\cos \\theta} & =\\omega_m-2\\frac{M}{L}\\omega_\\Delta \\tan \\theta \\\\\n",
+    "\\frac{\\dot{y}_f^r(t)}{R_w \\sin \\theta} & =\\omega_m+2\\frac{M}{L}\\omega_\\Delta\\frac{1}{\\tan\\theta}\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "Which gives:\n",
+    "$$$$\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\omega_{\\Delta} & =\\frac{L}{2M(\\frac{1}{\\tan\\theta} - \\tan \\theta)} (\\frac{\\dot{y}_f^r(t)}{R_w \\sin \\theta}-\\frac{\\dot{x}_f^r(t)}{R_w \\cos \\theta})) \\\\\n",
+    "\\omega_m & =\\frac{\\dot{x}_f^r(t)}{R_w \\cos \\theta} + \\frac{\\tan^2\\theta}{1-\\tan^2\\theta} (\\frac{\\dot{y}_f^r(t)}{R_w \\sin \\theta}-\\frac{\\dot{x}_f^r(t)}{R_w \\cos \\theta}))\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "We can then solve for $\\omega_l(t)$ and $\\omega_r(t)$:\n",
+    "\n",
+    "Finally, We can the expression of $\\omega_l(t)$ and $\\omega_r(t)$ to find the corresponding wheel velocities for a given reference of the foot position."
    ]
   },
   {
